@@ -3,6 +3,8 @@ Revision history for Perl extension PGXN::API
 0.10.1
       - Fixed the search API to throw a 400 for invalid queries: Missing
         query, or a query with a value of "*" or "?".
+      - Chagned the search URI template from "/search" to "/search/{in}/", as
+        the thing to be searched is required in the URI.
 
 0.10.0  2011-04-11T23:41:16
       - Removed PGXN::API::Stats. The same data is now generated by
